--- a/pom.xml
+++ b/pom.xml
@@ -3,11 +3,16 @@
   <modelVersion>4.0.0</modelVersion>
 
   <!-- The basics. -->
-  <groupId>org.olap4j</groupId>
+  <groupId>com.ibboost.fork.olap4j</groupId>
   <artifactId>olap4j-xmlaserver</artifactId>
-  <version>TRUNK-SNAPSHOT</version>
+  <version>1.3.1-SNAPSHOT</version>
   <packaging>bundle</packaging>
-
+  <parent>
+    <artifactId>common-base</artifactId>
+    <groupId>org.ibboost</groupId>
+    <version>1.3.7</version>
+    <relativePath>../ibb-common-base</relativePath>
+  </parent>
   <!-- More project information. -->
   <name>olap4j-xmlaserver</name>
   <description>XML for Analysis (XMLA) server based upon olap4j connections</description>
@@ -41,40 +46,41 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <scm.repo>ibb-public-fork-olap4j-xmlaserver</scm.repo>
+    <dist.default.release.id>nexus.external.releases</dist.default.release.id>
+    <dist.default.snapshot.id>nexus.external.snapshots</dist.default.snapshot.id>
+    <dist.default.release.url>${repo.external.root.url}/project-mysticeti-releases/</dist.default.release.url>
+    <dist.default.snapshot.url>${repo.external.root.url}/project-mysticeti-snapshots/</dist.default.snapshot.url>
   </properties>
-
-  <!-- Environment settings. -->
-  <issueManagement/>
-
-  <scm>
-    <connection>scm:git:git://github.com/olap4j/olap4j-xmlaserver.git</connection>
-    <developerConnection>scm:git:git@github.com:olap4j/olap4j-xmlaserver.git</developerConnection>
-    <url>http://github.com/olap4j/olap4j-xmlaserver/tree/master</url>
-  </scm>
 
   <!-- Dependencies. -->
   <dependencies>
     <dependency>
       <groupId>log4j</groupId>
       <artifactId>log4j</artifactId>
-      <version>1.2.14</version>
+      <version>${log4j1.version}</version>
     </dependency>
     <dependency>
-      <groupId>commons-dbcp</groupId>
-      <artifactId>commons-dbcp</artifactId>
-      <version>1.2.1</version>
+		  <groupId>org.apache.commons</groupId>
+		  <artifactId>commons-dbcp2</artifactId>
+			<version>${commons-dbcp2.version}</version>
     </dependency>
     <dependency>
       <groupId>org.olap4j</groupId>
       <artifactId>olap4j</artifactId>
-      <version>1.2.0</version>
+      <version>${olap4j.version}</version>
     </dependency>
     <dependency>
-      <groupId>javax.servlet</groupId>
-      <artifactId>servlet-api</artifactId>
-      <version>2.4</version>
+      <groupId>jakarta.servlet</groupId>
+      <artifactId>jakarta.servlet-api</artifactId>
+      <version>${jakarta-servlet.version}</version>
       <scope>provided</scope>
     </dependency>
+		<dependency>
+		    <groupId>org.apache.commons</groupId>
+		    <artifactId>commons-collections4</artifactId>
+			<version>${commons-collections4.version}</version>
+		</dependency>
   </dependencies>
 
   <reporting>
@@ -118,10 +124,6 @@
       <plugin>
         <artifactId>maven-compiler-plugin</artifactId>
           <version>2.3.2</version>
-          <configuration>
-          <source>1.5</source>
-          <target>1.5</target>
-        </configuration>
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
